cluster/infrastructure/minio/005-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - minio.meba.xyz
      secretName: tls-minio
  rules:
  - host: minio.meba.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: minio
              port:
                number: 9001
